tests/baselines/reference/isolatedDeclarationErrors.errors.txt
isolatedDeclarationErrors.ts(2,1): error TS9009: Assigning properties to functions without declaring them is not supported with --isolatedDeclarations. Add an explicit declaration for the properties assigned to this function.
isolatedDeclarationErrors.ts(5,1): error TS9009: Assigning properties to functions without declaring them is not supported with --isolatedDeclarations. Add an explicit declaration for the properties assigned to this function.
isolatedDeclarationErrors.ts(7,30): error TS9007: Declaration emit for this file requires type resolution. An explicit type annotation may unblock declaration emit.
isolatedDeclarationErrors.ts(8,1): error TS9009: Assigning properties to functions without declaring them is not supported with --isolatedDeclarations. Add an explicit declaration for the properties assigned to this function.


==== isolatedDeclarationErrors.ts (4 errors) ====
    function errorOnAssignmentBelowDecl(): void {}
    errorOnAssignmentBelowDecl.a = "";
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS9009: Assigning properties to functions without declaring them is not supported with --isolatedDeclarations. Add an explicit declaration for the properties assigned to this function.
    
    const errorOnAssignmentBelow = (): void => {}
    errorOnAssignmentBelow.a = "";
    ~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS9009: Assigning properties to functions without declaring them is not supported with --isolatedDeclarations. Add an explicit declaration for the properties assigned to this function.
    
    const errorOnMissingReturn = () => {}
                                 ~~~~~~~~
!!! error TS9007: Declaration emit for this file requires type resolution. An explicit type annotation may unblock declaration emit.
    errorOnMissingReturn.a = "";
    ~~~~~~~~~~~~~~~~~~~~~~
!!! error TS9009: Assigning properties to functions without declaring them is not supported with --isolatedDeclarations. Add an explicit declaration for the properties assigned to this function.
    